intear-dex-management/tests/snapshots/xyk_writes__swap_to_wallet_without_token_storage.snap
---
source: intear-dex-management/tests/xyk_writes.rs
expression: "cli.transaction(\"bob.near\",\n&[\"xyk\", \"swap\", \"bob.near\", \"0\", \"sell\", \"1 NEAR\", \"max-slippage\", \"1%\",\n\"from-wallet\", \"to-wallet\"]).await"
---
$ near-intear-dex-management xyk swap bob.near 0 sell '1 NEAR' max-slippage '1%' from-wallet to-wallet network-config sandbox sign-with-plaintext-private-key ed25519:2y9ToyGhuue7muH4Y5sStZpcGuQ7Wmaq5g5MnT1c2LSn3rr6rSJh5f99BBi4qr3umKDznj6LTV71XGtji1dadTbt send
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management xyk swap bob.near 0 sell '1 NEAR' max-slippage '1%' from-wallet to-wallet network-config sandbox sign-with-plaintext-private-key ed25519:2y9ToyGhuue7muH4Y5sStZpcGuQ7Wmaq5g5MnT1c2LSn3rr6rSJh5f99BBi4qr3umKDznj6LTV71XGtji1dadTbt send

Error:
   0: bob.near has no storage on usdt.tether-token.near, so it can't receive the tokens in its wallet

Suggestion: Use to-balance instead, or pay for storage on usdt.tether-token.near with its storage_deposit first
