intear-dex-management/tests/snapshots/xyk_writes__swap_with_referrer_without_settings.snap
---
source: intear-dex-management/tests/xyk_writes.rs
expression: "cli.transaction(\"alice.near\",\n&[\"xyk\", \"swap\", \"alice.near\", \"0\", \"sell\", \"0.5 NEAR\", \"max-slippage\", \"1%\",\n\"from-balance\", \"to-balance\", \"--referrer\", \"bob.near\"]).await"
---
$ near-intear-dex-management xyk swap alice.near 0 sell '0.5 NEAR' max-slippage '1%' from-balance to-balance --referrer bob.near network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
exit code: 0
--- stdout ---
--- stderr ---
├  sandbox · signer alice.near · dex.intear.near
│  Sell 0.5 NEAR on pool #0 (NEAR / USDt) of slimedragon.near/xyk for at least 1.357205 USDt, 1.370915 USDt at the current price
│  The NEAR comes from alice.near's balance on dex.intear.near
│  The USDt goes to alice.near's balance on dex.intear.near
│  bob.near is the referrer, but takes no fee: it has no referral settings on slimedragon.near/xyk
│  Actions: execute_operations (1 yoctoNEAR, 100 Tgas)
├  Unsigned transaction:
│    signer_id:    alice.near
│    receiver_id:  dex.intear.near
│    actions:
│       -- function call:
│                       method name:  execute_operations
│                       args:         {
│                                       "operations": [
│                                         {
│                                           "SwapSimple": {
│                                             "dex_id": "slimedragon.near/xyk",
│                                             "message": "AAAAAA==",
│                                             "asset_in": "near",
│                                             "asset_out": "nep141:usdt.tether-token.near",
│                                             "amount": {
│                                               "Amount": {
│                                                 "ExactIn": "500000000000000000000000"
│                                               }
│                                             },
│                                             "constraint": "1357205"
│                                           }
│                                         }
│                                       ],
│                                       "referrer": "bob.near"
│                                     }
│                       gas:          100.0 Tgas
│                       deposit:      1 yoctoNEAR
│
├  Your transaction was signed successfully.
│    Public key: ed25519:[HASH]
│    Signature:  ed25519:[SIGNATURE]
│
├  Transaction Execution Info:
│    Gas burned: [GAS]
│    Transaction fee: [FEE]
│    Transaction ID: [HASH]
│    To see the transaction in the transaction explorer, please open this url in your browser:
│    http://[SANDBOX RPC]/transactions/[HASH]
│
├  Function execution logs:
│    Logs [dex.intear.near]:
│      Fully authorized: true
│      Executing operation 0
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_event","data":{"dex_id":"slimedragon.near/xyk","event":{"standard":"xyk","version":"1.0.0","event":"pool_updated","data":{"pool_id":0,"pool":{"Private":{"assets":[{"asset_id":"near","balance":"104727075144066525423207416"},{"asset_id":"nep141:usdt.tether-token.near","balance":"286490287"}],"fees":{"receivers":[["Pool",2000],[{"Account":"alice.near"},500],[{"Account":"plach.intear.near"},1]]},"fee_configuration":{"receivers":[["Pool",2000],[{"Account":"alice.near"},500]]},"owner_id":"slimedragon.near","locked":false}}}},"referrer":"bob.near","user":"alice.near"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_event","data":{"dex_id":"slimedragon.near/xyk","event":{"standard":"xyk","version":"1.0.0","event":"swap","data":{"pool_id":0,"request":{"message":"AAAAAA==","asset_in":"near","asset_out":"nep141:usdt.tether-token.near","amount":{"ExactIn":"500000000000000000000000"},"referrer":"bob.near"},"amount_in":"500000000000000000000000","fees_breakdown":[["Pool","near","1000000000000000000000"],[{"Account":"alice.near"},"near","250000000000000000000"],[{"Account":"plach.intear.near"},"near","500000000000000000"]],"amount_out":"1370915"}},"referrer":"bob.near","user":"alice.near"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"user_balance_update","data":{"account_id":"alice.near","asset_id":"near","balance":"1813627024170279357901088"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_balance_update","data":{"dex_id":"slimedragon.near/xyk","asset_id":"near","balance":"154730173516927416113249107"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_balance_update","data":{"dex_id":"slimedragon.near/xyk","asset_id":"nep141:usdt.tether-token.near","balance":"1286490928"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"user_balance_update","data":{"account_id":"alice.near","asset_id":"nep141:usdt.tether-token.near","balance":"257614074"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"swap","data":{"dex_id":"slimedragon.near/xyk","request":{"message":"AAAAAA==","asset_in":"near","asset_out":"nep141:usdt.tether-token.near","amount":{"ExactIn":"500000000000000000000000"},"referrer":"bob.near"},"amount_in":"500000000000000000000000","amount_out":"1370915","trader":"alice.near","referrer":"bob.near"}}
│    Logs [alice.near]:   No logs
│
├  Function execution return value:
│    Empty return value
│


The "execute_operations" call to <dex.intear.near> on behalf of <alice.near> succeeded.

├  ✓ Swapped on pool #0 (NEAR / USDt) of slimedragon.near/xyk; the USDt went to alice.near's balance on dex.intear.near
│  Pool #0 of slimedragon.near/xyk now holds 104.727075144066525423207416 NEAR and 286.490287 USDt
│  Pool #0 of slimedragon.near/xyk swapped 0.5 NEAR for 1.370915 USDt
│  alice.near now has 1.813627024170279357901088 NEAR on dex.intear.near
│  alice.near now has 257.614074 USDt on dex.intear.near


Here is your console command if you need to script it or re-run:
    near intear-dex-management xyk swap alice.near 0 sell '0.5 NEAR' max-slippage '1%' from-balance to-balance --referrer bob.near network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
